<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/genderDropdown"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1" tools:targetApi="lollipop"/>

        <Spinner
            android:id="@+id/ageDropdown"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText

        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="@dimen/inputTextSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText

        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="@dimen/inputTextSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText

        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/repeatPsw"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="@dimen/inputTextSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText

            android:id="@+id/nameTF"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="@dimen/inputTextSize" />

        <EditText

            android:id="@+id/firstnameTF"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="@dimen/inputTextSize" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Spinner
        android:id="@+id/partycityDropdown"
        style="@android:style/Widget.Material.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1" />

</LinearLayout>