<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="@dimen/titelTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/defaultClubname"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="@dimen/defaultTextSize" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/adress"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="@dimen/defaultTextSize" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/priceclass"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="@dimen/defaultTextSize" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_horizontal|top"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/default_button"
                        android:text="@string/change"
                        android:textColor="@color/colorSecondary" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/registerBtn"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/default_button"
                        android:text="@string/change"
                        android:textColor="@color/colorSecondary" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/partycityDropdown2"
                        style="@android:style/Widget.Material.Spinner.Underlined"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appSettings"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/defaultTextSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/notificationSetting" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/default_button"
                android:text="@string/logout"
                android:textColor="@color/colorSecondary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/default_button"
                android:text="@string/saveSettings"
                android:textColor="@color/colorSecondary" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>