<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/showviewLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/toolbar"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="1dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/settingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbar_button_active"
                    android:text="@string/settings" />

                <Button
                    android:id="@+id/partysButton"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbar_button_active"
                    android:text="@string/partys" />

                <Button
                    android:id="@+id/reservationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbar_button_active"
                    android:text="@string/reservations" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>