<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="@dimen/titelTextSize" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_question"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="@dimen/defaultTextSize" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <Button
                    android:id="@+id/userButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/default_button"
                    android:text="@string/user" />

                <Button
                    android:id="@+id/emButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/default_button_passive"
                    android:text="@string/event_manager" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/default_button"
                android:text="@string/register"
                android:textColor="@color/colorSecondary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>