<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="@dimen/defaultTextSize" />


            <EditText

                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="@dimen/inputTextSize" />

            <EditText
                android:id="@+id/loginPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autoText="false"
                android:background="@drawable/border"
                android:ems="10"
                android:freezesText="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textIsSelectable="false"
                android:textSize="@dimen/inputTextSize" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="callRegister"
                android:text="@string/register"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/hyperText"
                android:textSize="@dimen/defaultTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/default_button"
                android:text="Login"
                android:textColor="@color/colorSecondary" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>